--- a/Mini-Project_ How To Not Create Layouts/index.html
+++ b/Mini-Project_ How To Not Create Layouts/index.html
@@ -5,9 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layouts</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="styles.css" type="text/css" />
   </head>
   <body>
-    <div class="box1"></div>
+    <header>
+      <nav>
+        <h1 id="logo">Logo</h1>
+        <ul>
+          <li><a href="#"> Home</a></li>
+          <li><a href="#"> About</a></li>
+          <li><a href="#"> Contacts</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="hero-section">
+      <h2>The Cooking Master</h2>
+      <h3>Buy Our Home Made Bakery</h3>
+      <button>Buy</button>
+    </section>
+    <section class="form-section">
+      <header>
+        <h2>Contact Us</h2>
+      </header>
+      <form>
+        <label for="name-input">Name:</label>
+        <input type="text" name="name" id="name-input" />
+        <label for="name-input">Email:</label>
+        <input type="email" name="email" id="email-input" />
+        <label for="message">Message:</label>
+        <textarea
+          name="message-input"
+          id="message-input"
+          cols="30"
+          row="10"
+        ></textarea>
+        <button>Submit</button>
+      </form>
+    </section>
   </body>
 </html>
