--- a/Mini-Project_ How To Not Create Layouts/index.html
+++ b/Mini-Project_ How To Not Create Layouts/index.html
@@ -16,11 +16,12 @@
           <li><a href="#"> About</a></li>
           <li><a href="#"> Contacts</a></li>
         </ul>
+        <div class="clear"></div>
       </nav>
     </header>
     <section class="hero-section">
       <h2>The Cooking Master</h2>
-      <h3>Buy Our Home Made Bakery</h3>
+      <h3>Buy Our Home Made Food</h3>
       <button>Buy</button>
     </section>
     <section class="form-section">
