--- a/Personal-Resume-Using-CSS/index.html
+++ b/Personal-Resume-Using-CSS/index.html
@@ -8,6 +8,8 @@
 
 <!-- Link For Stylesheet--> 
     <link rel="stylesheet" href="style.css">
+    <!-- Link For Bootstrap Stylesheet--> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     
 </head>
 <body>
@@ -16,103 +18,13 @@
 </html>
 
 <body>
-
-    <header id="body-header">
-        <nav>
-            
-            <div class="dropdown-menu text-right">
-                <div class="bars">
-                    <i class="fas fa-bars"></i>
-                </div>
-                <div class="dropdown-list nav-menu">
-                    <ul class="no-list-style">
-                        <li>
-                            <a href="#"> Home </a>
-                        </li>
-                        <li>
-                            <a href="#about"> About </a>
-                        </li>
-                        <li>
-                            <a href="#skills"> Skills </a>
-                        </li>
-                        <li>
-                            <a href="#experience">Experience</a>
-                        </li>
-                        <li>
-                            <a href="#education">Education</a>
-                        </li>
-                        <li>
-                            <a href="#portfolio">Portfolio</a>
-                        </li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                    </div>
-
-             </div>   
-
-            <ul class="no-list-style horizontal-list text-center nav-menu">
-                <li>
-                    <a href="#"> Home </a>
-                </li>
-                <li>
-                    <a href="#about"> About </a>
-                </li>
-                <li>
-                    <a href="#skills"> Skills </a>
-                </li>
-                <li>
-                    <a href="#education">Education</a>
-                </li>
-                <li>
-                    <a href="#portfolio">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-            </ul>
-
-        </nav>
-
-        <div id="name-social-container">
-            <div class="text-center">
-                <h1 id="my-name">My Name</h1>
-            </div>
-            <div>
-                <ul class="no-list-style horizontal-list text-center social-icons">
-                    <li>
-                        <a href="#">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fab fa-stack-overflow"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fab fa-google-plus-g"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fab fa-quora"></i>
-                        </a>
-                    </li>
-                </ul>
-
-            </div>
-
-        </div>
-
-    </header>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/media/banner.jpg" class="d-block w-100 h-80" alt="...">
+          </div>
+      </div>
+    </div>
     <main>
 
         <section id="about">
@@ -393,5 +305,8 @@
             </div>
         </section>
     </main>
+<!-- Link For Js Script-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 </body>
 </html>
